<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="detail_activity">Movie Detail</string>
    <string name="reminder_activity">Reminder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="search">Search</string>
    <string name="change_language">Change Language</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="title_favorite">Favorite</string>
    <string name="detail">detail</string>
    <string name="share">share</string>
    <string name="query_hint">Search Movie</string>
    <string name="title_activity_detail">DetailActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail_overview">Overview</string>
    <string name="detail_title">Title</string>
    <string name="detail_movie">Detail</string>
    <string name="detail_official_sites">Official Sites</string>
    <string name="detail_language">Language</string>
    <string name="detail_release_date">Release Date</string>
    <string name="detail_genres">Genres</string>
    <string name="detail_companies">Companies</string>
    <string name="detail_duration">Duration</string>
    <string name="detail_vote_count">Vote Count</string>
    <string name="detail_average_vote">Average Vote</string>
    <string name="detail_popularity">Popularity</string>
    <string name="detail_country">Country</string>
    <string name="favorite_page">Favorite Page</string>
    <string name="movie_result">Movie Not Found</string>

    <string name="confirmation_added">Added to favorite</string>
    <string name="confirmation_delete">Deleted from favorite</string>
    <string name="no_result">No Result</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="no_data">No Data</string>
    <string name="set_daily_reminder_at_07_00_am">Set Daily Remainder At 07.00 AM</string>
    <string name="set_release_today_reminder_at_08_00_am">Set Release Today Remainder At 08.00 AM</string>
    <string name="reminder_setting">Reminder Setting</string>
    <string name="content_text_daily">Movie Catalogue missing you</string>
    <string name="content_text_today">Today</string>
    <string name="content_text_released">released</string>
    <string name="toast_set_notif">Reminder has been set</string>
    <string name="toast_cancel_notif">Reminder has been canceled</string>
    <string name="content_text_no_released_movie">No movies released today</string>
    <string name="movie_poster">Movie Poster</string>
</resources>
