<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <android.support.v7.widget.CardView style="@style/CardMovie">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/TextDetailMovie.Header"
                    android:text="@string/detail_title" />

                <View style="@style/separator" />

                <TextView
                    android:id="@+id/detail_title"
                    style="@style/TextDetailMovie.Content"
                    tools:text="@string/app_name" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/CardMovie">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/TextDetailMovie.Header"
                    android:text="@string/detail_overview" />

                <View style="@style/separator" />

                <TextView
                    android:id="@+id/detail_overview"
                    style="@style/TextDetailMovie.Content" />


            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/CardMovie.DetailProperties">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/TextDetailMovie.Header"
                    android:text="@string/detail_movie"
                    tools:text="Detail" />

                <View style="@style/separator" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/TextDetailMovie.Content.Label"
                            android:text="@string/detail_official_sites" />

                        <TextView
                            android:id="@+id/detail_official_sites"
                            style="@style/TextDetailMovie.Content.Value"
                            tools:text=": Official Sites" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/TextDetailMovie.Content.Label"
                            android:text="@string/detail_country" />

                        <TextView
                            android:id="@+id/detail_country"
                            style="@style/TextDetailMovie.Content.Value"
                            tools:text=": Country" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/TextDetailMovie.Content.Label"
                            android:text="@string/detail_language" />

                        <TextView
                            android:id="@+id/detail_language"
                            style="@style/TextDetailMovie.Content.Value"
                            tools:text=": Language" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/TextDetailMovie.Content.Label"
                            android:text="@string/detail_release_date" />

                        <TextView
                            android:id="@+id/detail_release_date"
                            style="@style/TextDetailMovie.Content.Value"
                            tools:text=": Release Date" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/TextDetailMovie.Content.Label"
                            android:text="@string/detail_genres" />

                        <TextView
                            android:id="@+id/detail_genre"
                            style="@style/TextDetailMovie.Content.Value"
                            tools:text=": Genre" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/TextDetailMovie.Content.Label"
                            android:text="@string/detail_companies" />

                        <TextView
                            android:id="@+id/detail_companies"
                            style="@style/TextDetailMovie.Content.Value"
                            tools:text=": Companies" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/TextDetailMovie.Content.Label"
                            android:text="@string/detail_duration" />

                        <TextView
                            android:id="@+id/detail_duration"
                            style="@style/TextDetailMovie.Content.Value"
                            tools:text=": Duration" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/TextDetailMovie.Content.Label"
                            android:text="@string/detail_vote_count" />

                        <TextView
                            android:id="@+id/detail_vote_count"
                            style="@style/TextDetailMovie.Content.Value"
                            tools:text=": Vote Count" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/TextDetailMovie.Content.Label"
                            android:text="@string/detail_average_vote" />

                        <TextView
                            android:id="@+id/detail_average_vote"
                            style="@style/TextDetailMovie.Content.Value"
                            tools:text=": Average Vote" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/TextDetailMovie.Content.Label"
                            android:text="@string/detail_popularity" />

                        <TextView
                            android:id="@+id/detail_popularity"
                            style="@style/TextDetailMovie.Content.Value"
                            tools:text=": Popularity" />

                    </TableRow>


                </TableLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>